# MbitionCodeChallenge

./: CMakeLists.txt  README.md  input.txt
config/: cities.txt  fact_related_words.txt  weather_keywords.txt
include/: IntentRecognizer.h
src/: CMakeLists.txt  IntentRecognizer.cpp  main.cpp
src/include/: IntentRecognizer.h
tst/: CMakeLists.txt  IntentRecognizerTest.cpp
